@@ -31,6 +31,7 @@
 * The ``post_`` methods in ```PlaceholderAdminMixin`` have been deprecated in favor of
   placeholder operation signals.
 * Re-introduced the "Revert to live" menu option.
+* Added support for django-reversion >= 2 (see #5830)
 
 
 === 3.4.1 (2016-10-04) ===
